# MLNeutrinoAnalysis

./: .gitignore  CMakeLists.txt  README.md  analysis.cpp  reweight.cpp  sensitivity.cpp
include/: analyzer.h  crthit.h  csv_parser.h  cut.h  dataset.h  event.h  fmatch.h  imatch.h  interaction.h  linkdef.h  neutrino.h  optimize.h  particle.h  pcut.h  pmatch.h  pvar.h  utilities.h  var.h  variables.h
src/: crthit.cpp  csv_parser.cpp  dataset.cpp  event.cpp  fmatch.cpp  imatch.cpp  interaction.cpp  neutrino.cpp  optimize.cpp  particle.cpp  pmatch.cpp  utilities.cpp
